--- a/css/style.css
+++ b/css/style.css
@@ -209,8 +209,9 @@ header a:hover{
 }
 
 .conteudo-cardapio i{
-    margin: 0 5% 0 0;
+    margin-right:20px ;
 }
+
 
 .conteudo-cardapio div{
     background-color: white;
@@ -609,8 +610,264 @@ header a:hover{
 }
 
 @media (max-width: 820px){
-    
+.header a{
+    font-size: 15px;
+}
+
+.conteudo-queridinhos div{
+    width: 180px;
+}
+
+.avaliacao{
+    margin: 10% 5%;
+}
+
+.instagram{
+    margin: 10% 13%;
+}
+
+.instagram img{
+    margin-top: 10%;
+    width: 180px;
+}
+
+.conteudo-localizacao iframe{
+    width: 300px;
+}
+}
+
+@media (max-width: 700px){
+header a{
+    font-size: 15px;
+}
+
+header i{
+    font-size: 15px;
+}
+
+header span{
+    font-size: 15px;
+}
+
+.sobre{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.carousel-sobre{
+    display: none;
+}
+
+.carousel-container-sobre{
+    display: none;
+}
+
+.queridinhos h2{
+    margin: 15% 0 5% 0;
+}
+
+.conteudo-queridinhos{
+    margin: 0;
+    flex-direction: column;
+}
+
+.conteudo-queridinhos div{
+    width: 270px;
+    margin-left: 7.5%;
+    margin-top: 5%;
+}
+
+.queridinhos a{
+    margin-top: 10%;
+}
+
+.conteudo-cardapio div{
+    margin: 0 2%;
+}
+
+.conteudo-queridinhos div:nth-child(2){
+    margin-left: 50%;
+}
+
+.avaliacao{
+    margin: 10% 7.5%;
+}
+
+.carrossel{
+    width: 450px;
+}
+
+.slide i{
+    left: 15px;
+}
+
+.instagram img{
+    width:150px;
+}
 }
 /* #endregion endresponsive 1500 até 601 */
+
+/* #region responsive 600 até 300 */
+@media (max-width: 600px){
+main{
+    margin: 0 5%;
+}
+
+.menu{
+    display: block;
+    height: 100%;
+    position: fixed;
+    margin: 0;
+    top: 0;
+    right: -350px;
+    max-width: 350px;
+    width: 50%;
+    z-index: 9;    
+    transition: right .6s ease-out;       
+    box-shadow: none;    
+    background-color: rgb(240, 227, 55);          
+}
+      
+.menu .links-nav ul{
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+      
+.menu ul li{
+    margin: 5% 0;
+}
+      
+.menu a{
+    color: #f2f2f2;
+    letter-spacing: 3px;    
+}
+      
+.menu a:hover{
+    color: white;
+}
+      
+.abrir-menu{
+    background: url(../img/abrir-menu.png);
+    background-size: cover;
+    display: flex;
+    padding: 20px;
+    border: 0;
+    margin: 5% 0 0 5%;
+    transition: all .5s ease;
+}
+      
+.abrir-menu:hover{
+    transform: rotate(180deg);
+}
+      
+.fechar-menu{
+    background: url(../img/fechar-menu.png);
+    background-size: cover;
+    display: block;
+    padding: 20px;
+    border: 0;
+    margin-left: 10%;
+    margin-bottom: 10%;
+    transition: all .5s ease;
+}
+      
+.fechar-menu:hover{
+    transform: rotate(180deg);
+}
+            
+.menu-ativo .menu{
+    right: 0;
+}
+
+.sobre{
+    width: 350px;
+    min-height: 0;
+    margin-top: 7rem;
+}
+
+.sobre div:nth-child(2n-1){
+    width: 100%;
+}
+
+.sobre a{
+    margin-right: 0;
+}
+
+.queridinhos h2{
+    margin-top: 50%;
+}
+
+.conteudo-queridinhos div{
+    width: 270px;
+    margin-left: 0;
+    margin-top: 5%;
+}
+
+.conteudo-queridinhos div:nth-child(2){
+    margin-left: 20%;
+}
+
+.conteudo-cardapio{
+    display: flex;
+    flex-direction: column;
+}
+.avaliacao{
+    margin: 10% 0%;
+}
+
+.slide{
+    width: 300px;
+    height: 450px;
+    margin-bottom: 10%;
+}
+
+.carrossel{
+
+    width: 300px;
+}
+.instagram div{
+    display: flex;
+    flex-direction: column;
+}
+
+.conteudo-localizacao{
+    flex-direction: column-reverse;
+}
+
+.rodape{
+    flex-direction: column;
+    padding: 0;
+    background-image: url(../img/fundo-rodape-600.svg);
+}
+  
+.rodape p{
+    font-size: 15px;
+}
+  
+.rodape h3{
+    font-size: 17px;
+}
+  
+.rodape a{
+    font-size: 14px;
+}
+  
+.rodape div{
+    margin: 5% 5%;
+}
+  
+.rodape div:nth-child(1){
+    margin: 10% 40%;
+}
+  
+.rodape div:nth-child(3){
+    margin-left: 60%;
+}
+
+}
+/* #endregion responsive 600 até 300*/
 
 /* #endregion responsive */
