--- a/css/index.css
+++ b/css/index.css
@@ -1124,9 +1124,10 @@ h1{
 }
 
 .conteudo-ifood h2{
-    /* font-size: 1.2rem;
-    margin-bottom: 7%; */
-    display: none;
+    font-size: 1.4rem;
+    margin-bottom: 7%;
+    margin-top: 0;
+
 }
 
 .conteudo-ifood h3{
@@ -1136,11 +1137,16 @@ h1{
     margin-top: 0;
 }
 
+.link-ifood{
+    padding: 0;
+    width: 100%;
+}
+
 .link-ifood a{
     background-color: white;
     text-decoration: none;
     color: #000000;
-    padding: 15px 20px;
+    padding: 15px 24px;
     border-radius: 17px;
     font-size: 11px;
 }
