--- a/css/contato.css
+++ b/css/contato.css
@@ -11,15 +11,6 @@ body{
     padding: 0;
 }
 
-main{
-    margin: 0 5%;
-}
-
-h4, h5{
-    margin: 0;
-    padding: 0;
-}
-
 /* #endregion global */
 
 /* #region header */
@@ -68,107 +59,119 @@ header a,  header ul{
 header a:hover{
     color: rgb(255, 255, 255);
 }
-
 /* #endregion header */
 
-/* #region opções */
-.opcoes{
+/* #region formulario */
+.interface{
+    margin: 0 auto;
+}
+
+section.formulario{
+    padding: 80px 4%;
+}
+
+section.formulario h2{
+    text-align: center;
+    font-size: 40px;
+    text-transform: uppercase;
+    text-shadow: 5px 5px 20px yellow;
+}
+
+section.formulario h2 span{
+    color: rgb(0, 0, 0);
+}
+
+form{
+    max-width: 500px;
+    margin: 0 auto;
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    text-align: center;
-    margin-top: 3%;
-    margin-bottom: 5%;
+    gap: 10px;
+    margin-top: 40px;
 }
 
-.opcoes h2{
-    font-size: 1.8rem;
-}
-
-.opcoes h3{
-    font-size: 1.5rem;
-}
-
-.container{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
-    text-align: start;
-    justify-content: center;
-}
-
-.item{
-    background-color: white;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.item h4{
-    margin-bottom: 5%;
-    font-size: 1.2rem;
-}
-
-.item h5{
-    font-weight: 300;
-    font-size: 1rem;
-}
-/* #endregion opcções */
-
-/* #region ifood */
-.conteudo-ifood{
-    margin: 10%;
-    display: flex;
-    align-items: center;
-    background-color: #faa827;
-    border-radius: 20px;
-    justify-content: center;
-    padding: 50px;
-    height: 300px;
-}
-
-.conteudo-ifood div:nth-child(1){
-    justify-content: start;
-}
-
-.conteudo-ifood div:nth-child(2){   
-    margin-left: 20%;
-}
-
-.conteudo-ifood h2{
-    font-size: 1.8rem;
-    margin-bottom: 7%;
-}
-
-.conteudo-ifood h3{
-    font-weight: 500;
-    margin-bottom: 13%;
-}
-
-.link-ifood{
-    background-color: white;
-    padding: 15px 20px;
-    border-radius: 17px;
+form input, form textarea{
+    width: 100%;
+    background-color: #000000;
+    border: none;
+    outline: 0;
+    padding: 20px 15px;
+    border-radius: 15px;
     font-size: 18px;
-    width: 40%;
+    color: #fff;
+}
+
+form textarea{
+    resize: none;
+}
+
+form .btn-enviar{
+    margin-top: 20px;
     text-align: center;
-    border: 1px solid white;
 }
 
-.link-ifood:hover{
-    background-color: #faa827;
-    transition: all .2s ease-in;
+form .btn-enviar input{
+    max-width: 120px;
+    background-color: yellow;
+    color: #000;
+    font-weight: 700;
+    cursor: pointer;
+    transition: .2s;
 }
 
-.link-ifood a{
-    text-decoration: none;
-    color: #000000;
+form .btn-enviar input:hover{
+    background-color: rgb(209, 209, 0);
+    transform: scale(1.05);
+}
+/* #endregion formulario */
+
+/* #region localização */
+.localizacao{
+    margin: 7% 10% 5% 10%;
+}
+  
+.localizacao h2{
+    text-align: center;
+    text-shadow: 5px 5px 20px yellow;
+    text-transform: uppercase;
+    font-size: 1.8rem;
 }
 
-.link-ifood-mobile a{
-    display: none;
+.conteudo-localizacao{
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
 }
-/* #endregion ifood */
+  
+.conteudo-localizacao div{
+    max-width: 100%;
+    padding-top: 10px;
+}
 
-/* #region rodape */
+.conteudo-localizacao div:nth-child(2){
+    text-align: center;
+}
+  
+.conteudo-localizacao h3{
+    font-size: 1.6rem;
+    margin-bottom: 6%;
+}
+  
+.conteudo-localizacao p{
+    font-size: 1.2rem;
+    width: 70%;
+    margin-left: 15%;
+
+}
+  
+.conteudo-localizacao iframe{
+    border-radius: 10px;
+}
+  
+/* #endregion localização */
+
+/* #region rodapé */
 .rodape{
     background-color: rgb(255, 240, 105);
     box-shadow: 0 1px 20px rgb(121, 121, 121);
@@ -224,14 +227,60 @@ header a:hover{
     text-align: center;
     padding: 6px 0;
 }
-/* #endregion rodape */
 
+/* #endregion rodapé */
 
 
 /* #region responsive */
 
+/* #region responsive 1500 até 601 */
+@media (max-width: 1270px){
+.conteudo-localizacao p{
+    font-size: 1rem;
+}
+    
+.conteudo-localizacao iframe{
+    border-radius: 10px;
+    width: 600px;
+    height: 400px;
+}
+}
+    
+@media (max-width: 1110px){
+.conteudo-localizacao p{
+    width: 100%;
+    margin-left: 0;
+}
+}
+    
+@media (max-width: 1040px){
+.conteudo-localizacao p{
+    width: 100%;
+}
+    
+.conteudo-localizacao iframe{
+    border-radius: 10px;
+    width: 500px;
+    height: 300px;
+}
+}
+    
+@media (max-width: 925px){
+.conteudo-localizacao iframe{
+    width: 450px;
+}
+}
+    
+@media (max-width: 820px){
+.conteudo-localizacao iframe{
+    width: 300px;
+}
+}
+/* #endregion endresponsive 1500 até 601 */
+    
+/* #region responsive 600 até 300 */
 @media (max-width: 600px){
-/* #region responsive header */
+/* #region reponsive header */
 header{
     margin-top: 5%;
 }
@@ -337,73 +386,31 @@ h1{
 .number{
     display: none;
 }
-/* #endregion responsive header */
+/* #endregion reponsive header */
 
-/* #region responsive opções */
-.opcoes{
-    margin-bottom: 10%;
-}
-
-.container{
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.opcoes h4{
-    margin-bottom: 20%;
-}
-/* #endregion responsive opções */
-    
-/* #region responsive ifood */
-.conteudo-ifood{
-    padding: 0;
-    margin-left: 3%;
-    margin-right: 3%;
-    height: 300px;
+/* #region responsive localização */
+.localizacao{
     margin-top: 20%;
-    margin-bottom: 10%;
 }
+    
+.localizacao h2{
+    font-size: 1.5rem;
+}
+    
+.conteudo-localizacao h3{
+    margin: 0;
+    font-size: 1.2rem;
+}
+    
+.conteudo-localizacao p{
+    font-size: 14px;
+}
+    
+.conteudo-localizacao{
+    flex-direction: column-reverse;
+}
+/* #endregion responsive localização */
 
-.conteudo-ifood img{
-    height: 380px;
-    width: 198px;
-}
-
-.conteudo-ifood div:nth-child(1){   
-    margin-left: 5%;
-}
-
-.conteudo-ifood h2{
-    font-size: 1.4rem;
-    margin-bottom: 7%;
-    margin-top: 0;
-}
-
-.conteudo-ifood h3{
-    font-weight: 500;
-    margin-bottom: 13%;
-    font-size: 13px;
-    margin-top: 0;
-}
-
-.link-ifood{
-    padding: 0;
-    width: 104%;
-}
-
-.link-ifood a{
-    background-color: white;
-    text-decoration: none;
-    color: #000000;
-    padding: 15px 24px;
-    border-radius: 17px;
-    font-size: 11px;
-}
-
-.link-ifood-mobile{
-    display: none;
-}
-/* #endregion reponsive ifood */
- 
 /* #region responsive rodapé */
 .rodape{
     flex-direction: column;
@@ -430,11 +437,11 @@ h1{
 .rodape div:nth-child(1){
     margin: 0 40%;
 }
-
+    
 .rodape div:nth-child(2){
     display: none;
-}
-      
+}   
+          
 .rodape div:nth-child(3){
     margin-left: 30%;
     margin-bottom: 5%;
@@ -443,7 +450,7 @@ h1{
 .direitos h4{
     font-size: 11px;
 }
-    
+
 .whatsapp img{
     position: fixed;
     right: 15px;
@@ -451,7 +458,8 @@ h1{
 }
 /* #endregion responsive rodapé */
 }
-
+/* #endregion responsive 600 até 300*/
+    
 /* #endregion responsive */
 
 .whatsapp{
